--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,5 +51,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "Space Invaders CST 326.sln"
+    "dotnet.defaultSolution": "Space Invaders for Resume.sln"
 }
